mostly to fix the missing tarball
git-svn-id: file:///srv/repos/svn-packages/svn@123041 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-applets/trunk/PKGBUILD
+++ b/gnome-applets/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-applets
-pkgver=2.91.4
-pkgrel=2
+pkgver=3.1.1
+pkgrel=1
 pkgdesc="GNOME Applets"
 arch=(i686 x86_64)
 license=('GPL')
@@ -13,9 +13,8 @@ options=(!emptydirs)
 url="http://www.gnome.org"
 groups=(gnome)
 install=gnome-applets.install
-#source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.91/${pkgname}-${pkgver}.tar.bz2)
-source=(${pkgname}-${pkgver}.tar.xz)
-sha256sums=('950ab962c39fca9375a9df0827ccb8f2178f7e84950c8fdbea5e3d2f9889a49c')
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}-20110506.tar.xz)
+sha256sums=('eb19a412e804975d614255520f4c7c6477d927e8d5cb6abe217008ab62ab857b')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
