--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 pkgname=dconf
-pkgver=0.7.3
-pkgrel=2
+pkgver=0.7.4
+pkgrel=1
 pkgdesc="A low-level configuration system."
 arch=(i686 x86_64)
 url="http://live.gnome.org/dconf"
@@ -11,16 +11,13 @@ depends=('glib2')
 makedepends=('vala' 'gobject-introspection' 'gtk3')
 optdepends=('gtk3: for dconf-editor')
 install=dconf.install
-source=(http://download.gnome.org/sources/${pkgname}/0.7/${pkgname}-${pkgver}.tar.bz2
-       load-enum.patch)
-sha256sums=('84efc95cb62b6637b2131e110ff447908be739c2185d69bebb300293b561dfd9'
-            '8ead56b2897b18c97b9b72b81bd6e9f9249e28743b05a2653bbf4e6af7d9f7cc')
+source=(http://download.gnome.org/sources/${pkgname}/0.7/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('299d79daf0b214c692e7d5788d7bda76d778c1748ea37c33256c4fa6143b22cd')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
-  patch -Np1 -i "${srcdir}/load-enum.patch"
-  ./configure --prefix=/usr \
+  ./configure --prefix=/usr --sysconfdir=/etc \
     --libexecdir=/usr/lib/dconf
   make
 }
