--- a/glsof/trunk/PKGBUILD
+++ b/glsof/trunk/PKGBUILD
@@ -1,32 +1,38 @@
 # $Id$
-# Contributor: Eric Belanger <eric@archlinux.org>
-# Contributor: Damir Perisa <damir.perisa@bluewin.ch>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+#  Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=glsof
-pkgver=0.9.16
-pkgrel=5
-pkgdesc="A gtk-GUI for lsof (aka GTK-lsof)"
+pkgver=1.0.0
+pkgrel=1
+pkgdesc="Two separate GUI utilities (Queries and Filemonitor) to the lsof command line utility"
 arch=('i686' 'x86_64')
 url="http://glsof.sourceforge.net/"
-license=('GPL')
-depends=('libxml2' 'gtk2' 'lsof')
-source=(http://download.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz glsof.desktop)
-md5sums=('5ad5f2a6908be713753d9826c38e3e2c' '1a6ab5bf5ef44ae31b8b7461b76f62db')
-sha1sums=('80f4596ad09c5ddb463bad299a76ce275c0ecd4d' '647be33bea11fec6ba0bfd59c02034dc64925e52')
-
-build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	./configure --prefix=/usr || return 1
-	make || return 1
-}
+license=('GPL3')
+depends=('java-runtime' 'lsof')
+if [ "$CARCH" = "i686" ]; then
+  source=(http://downloads.sourceforge.net/sourceforge/glsof/filemonitor-${pkgver}/filemonitor_linux32.tar.gz \
+          http://downloads.sourceforge.net/sourceforge/glsof/queries-${pkgver}/queries_linux32.tar.gz \
+          glsof-filemonitor glsof-queries)
+  md5sums=('7a541ee8c432b78f9bfd36dd1707fb8d'
+         '895bcec79edea97ebde36d7f5eaa3ee9'
+         '7e43c1120e15e65bd1a12d6f188be4a0'
+         '980da4b39e1e3f4fbed08018dfd3be7b')
+elif [ "$CARCH" = "x86_64" ]; then
+  source=(http://downloads.sourceforge.net/sourceforge/glsof/filemonitor-${pkgver}/filemonitor_linux64.tar.gz \
+          http://downloads.sourceforge.net/sourceforge/glsof/queries-${pkgver}/queries_linux64.tar.gz \
+          glsof-filemonitor glsof-queries)
+  md5sums=('9a6043b0b90fbc6de4db36967647dab0'
+         'ed96ee2105428aa8b038f5fe13b8cd1d'
+         '7e43c1120e15e65bd1a12d6f188be4a0'
+         '980da4b39e1e3f4fbed08018dfd3be7b')
+fi
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make DESTDIR=${pkgdir} install || return 1
-	install -Dm644 ../glsof.desktop \
-	    ${pkgdir}/usr/share/applications/glsof.desktop || return 1
-	install -d ${pkgdir}/usr/share/pixmaps
-	ln -s /usr/share/glsof/pixmaps/logo.png \
-	    ${pkgdir}/usr/share/pixmaps/glsof.png
+ cd "${srcdir}"
+ install -D -m755 glsof-filemonitor "${pkgdir}/usr/bin/glsof-filemonitor"
+ install -D -m755 glsof-queries "${pkgdir}/usr/bin/glsof-queries"
+ install -D -m644 filemonitor_linux??/filemonitor.jar "${pkgdir}/usr/share/java/glsof/filemonitor.jar"
+ install -D -m644 filemonitor_linux??/filemonitor.pdf "${pkgdir}/usr/share/doc/glsof/filemonitor.pdf"
+ install -D -m644 queries_linux??/queries.jar "${pkgdir}/usr/share/java/glsof/queries.jar"
+ install -D -m644 queries_linux??/queries.pdf "${pkgdir}/usr/share/doc/glsof/queries.pdf"
 }
