--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=libsamplerate
 pkgver=0.1.7
-pkgrel=1
+pkgrel=2
 pkgdesc="Secret Rabbit Code - aka Sample Rate Converter for audio"
 arch=('i686' 'x86_64')
 url="http://www.mega-nerd.com/SRC/index.html"
