--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,11 +5,11 @@
 pkgbase=qscintilla
 pkgname=('qscintilla' 'python-qscintilla' 'python2-qscintilla')
 pkgver=2.5.1
-pkgrel=1
+pkgrel=2
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
-makedepends=('python-qt')
+makedepends=('python2-pyqt')
 source=("http://riverbankcomputing.com/static/Downloads/QScintilla2/QScintilla-gpl-${pkgver}.tar.gz"
         'configure.py-objdir-support.diff')
 md5sums=('dd7edef5ff674d307057a3c12dbd8fce'
@@ -52,7 +52,7 @@ package_qscintilla() {
 
 package_python-qscintilla() {
     pkgdesc="Python 3 bindings for QScintilla2"
-    depends=('python-qt' 'python2-qscintilla')
+    depends=('pyqt' 'qscintilla')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     install -Dm755 Qsci.so \
@@ -61,7 +61,7 @@ package_python-qscintilla() {
 
 package_python2-qscintilla() {
     pkgdesc="Python 2 bindings for QScintilla2"
-    depends=('qscintilla' 'python2-qt')
+    depends=('python-qscintilla' 'python2-pyqt')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python2"
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
