--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,7 +12,7 @@
 pkgname=('llvm' 'llvm-ocaml' 'clang' 'clang-analyzer')
 pkgver=2.9
 _gcc_ver=4.6.0
-pkgrel=4
+pkgrel=5
 arch=('i686' 'x86_64')
 url="http://llvm.org/"
 license=('custom:University of Illinois/NCSA Open Source License')
@@ -24,7 +24,8 @@ source=(http://llvm.org/releases/$pkgver/$pkgname-$pkgver.tgz
         cindexer-clang-path.patch
         clang-toolchains-gcc-versions.patch
         clang-pure64.patch
-        enable-lto.patch)
+        enable-lto.patch
+        bug-9869-operator-h-c++0x.patch)
 md5sums=('793138412d2af2c7c7f54615f8943771'
          '634de18d04b7a4ded19ec4c17d23cfca'
          '70e23a3dc2b38ecb2bb4d2c48f47295d'
@@ -32,7 +33,8 @@ md5sums=('793138412d2af2c7c7f54615f8943771'
          '87a7162dbe99e9ffce6c40bd09f5f4f0'
          '8da236120a9a287a977b575b8b905c93'
          '225ee6b531f8327f34f344a18cb4ec81'
-         '8f7582d7440e4a8342c3aea9ec714fb4')
+         '8f7582d7440e4a8342c3aea9ec714fb4'
+         '047cac563a557463d7ec6bd87d953f5e')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
@@ -72,6 +74,10 @@ build() {
   # Make -flto work
   # Use gold instead of default linker, and always use the plugin
   patch -d tools/clang -Np0 -i "$srcdir/enable-lto.patch"
+
+  # Fix upstream bug #9869:
+  #   Operator.h incompatibility with GCC 4.6 in C++0x mode
+  patch -Np2 -i "$srcdir/bug-9869-operator-h-c++0x.patch"
 
   # Apply strip option to configure
   _optimized_switch="enable"
