--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=('libreoffice' 'libreoffice-sdk' 'libreoffice-extension-nlpsolver' 'libr
          'libreoffice-extension-report-builder' 'libreoffice-extension-wiki-publisher' 'libreoffice-extension-ct2n')
 _LOver=3.3.99.4
 pkgver=3.4beta4
-pkgrel=2
+pkgrel=3
 arch=('i686' 'x86_64')
 #_LO_tree="3.4"
 _OFFICEUPD="300"
@@ -344,13 +344,17 @@ package_libreoffice() {
 	# move sysui desktop files into place we want to use - javafilter and qstarter, but not unneeded printeradmin
 	install -dm755 ${pkgdir}/usr/share/{applications,icons,mime/packages,pixmaps}
 	rm ${pkgdir}/usr/lib/libreoffice/share/xdg/printeradmin.desktop
-	cp ${pkgdir}/usr/lib/libreoffice/share/xdg/*.desktop ${pkgdir}/usr/share/applications/
+	#cp ${pkgdir}/usr/lib/libreoffice/share/xdg/*.desktop ${pkgdir}/usr/share/applications/
+	for i in base calc draw impress javafilter math qstart startcenter writer; do
+	  cp ${pkgdir}/usr/lib/libreoffice/share/xdg/$i.desktop ${pkgdir}/usr/share/applications/libreoffice-$i.desktop
+	done
+#	cp ${pkgdir}/usr/lib/libreoffice/share/xdg/*.desktop ${pkgdir}/usr/share/applications/
 #	sed -i -e "s/Exec=oo/Exec=so/g" ${pkgdir}/usr/share/applications/javafilter.desktop # https://bugs.archlinux.org/task/23361
 	# remove version in menu entry and make it visible
 #	sed -i -e "s/3.4 Quickstarter/Quickstarter/g" ${pkgdir}/usr/share/applications/qstart.desktop
 	sed -i -e "s/3.4//g" ${pkgdir}/usr/share/applications/*.desktop
-	sed -i -e "/NoDisplay=true/d" ${pkgdir}/usr/share/applications/qstart.desktop
-	echo "Icon=startcenter" >> ${pkgdir}/usr/share/applications/qstart.desktop
+	sed -i -e "/NoDisplay=true/d" ${pkgdir}/usr/share/applications/libreoffice-qstart.desktop
+	echo "Icon=startcenter" >> ${pkgdir}/usr/share/applications/libreoffice-qstart.desktop
 	# remove unneeded .desktop files
 	rm -rf ${pkgdir}/usr/lib/libreoffice/share/xdg
 	
