--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=namcap
-pkgver=3.0.6
+pkgver=3.1
 pkgrel=1
 pkgdesc="A Pacman package analyzer"
 arch=('any')
 url="http://projects.archlinux.org/namcap.git/"
 license=('GPL')
-depends=('python' 'licenses')
+depends=('python' 'pyalpm' 'licenses')
 makedepends=('python-distribute')
 source=(ftp://ftp.archlinux.org/other/$pkgname/${pkgname}-${pkgver}.tar.gz)
-md5sums=('308ff7a2ef8abb6e5d6c18b4cf496f8f')
+md5sums=('fab0d4dc34aa4d9e10cbca7daf2c2c5d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
