upgpkg: ttf-dejavu 2.33-1 upstream update 2.33; add deps for install commands
git-svn-id: file:///srv/repos/svn-packages/svn@123117 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ttf-dejavu/trunk/PKGBUILD
+++ b/ttf-dejavu/trunk/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Michal Krenek <mikos@sg1.cz>
 
 pkgname=ttf-dejavu
-pkgver=2.32
-pkgrel=2
+pkgver=2.33
+pkgrel=1
 pkgdesc="Font family based on the Bitstream Vera Fonts with a wider range of characters"
 arch=('any')
 url="http://dejavu.sourceforge.net/"
 license=('custom')
-depends=('fontconfig' 'xorg-fonts-encodings')
+depends=('fontconfig' 'xorg-fonts-encodings' 'xorg-mkfontscale' 'xorg-mkfontdir')
 install=ttf-dejavu.install
 source=(http://downloads.sourceforge.net/project/dejavu/dejavu/${pkgver}/dejavu-{,lgc-}fonts-ttf-${pkgver}.tar.bz2)
-md5sums=('63b1bf644cd54188a2ec43aff1846104'
-         '2813b852ded0c1c89264627ce1bfcadc')
+md5sums=('8b601e91725b6d69141b0fcf527948c0'
+         'fde03af699ccf8833f09d7002e3060ef')
 
 package() {
   install -dm755 "${pkgdir}"/etc/fonts/conf.avail
