--- a/xmahjongg/trunk/PKGBUILD
+++ b/xmahjongg/trunk/PKGBUILD
@@ -1,21 +1,24 @@
 # $Id$
-# Maintainer: Kevin Piche <kevin@archlinux.org>
-# Contributor: Roberto Carvajal <rcarvajal@users.sf.net>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=xmahjongg
 pkgver=3.7
-pkgrel=3
+pkgrel=4
 pkgdesc="Mahjongg game for X-Window"
 arch=('i686' 'x86_64')
 url="http://www.lcdf.org/xmahjongg/"
 license=('GPL')
-depends=('gcc-libs' 'libsm' 'libx11')
-source=(http://www.lcdf.org/$pkgname/$pkgname-$pkgver.tar.gz)
+depends=('gcc-libs' 'libx11')
+source=(http://www.lcdf.org/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('9db5bf1b329b410220b7976cd9b3d374')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  ./configure --prefix=/usr --mandir=/usr/share/man || return 1
-  make || return 1
-  make DESTDIR=$pkgdir install || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  ./configure --prefix=/usr --mandir=/usr/share/man
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
