use srcdir instead of stratdir
git-svn-id: file:///srv/repos/svn-packages/svn@123188 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ndiswrapper/trunk/PKGBUILD
+++ b/ndiswrapper/trunk/PKGBUILD
@@ -25,9 +25,9 @@ md5sums=('1431f7ed5f8e92e752d330bbb3aed333'
 build()
 {
   cd $srcdir/ndiswrapper-$pkgver/driver
-  patch -Np2 -i $startdir/kernel-2.6.35.patch
-  patch -Np2 -i $startdir/kernel-2.6.36.patch
-  patch -Np3 -i $startdir/kernel-2.6.38.patch
+  patch -Np2 -i $srcdir/kernel-2.6.35.patch
+  patch -Np2 -i $srcdir/kernel-2.6.36.patch
+  patch -Np3 -i $srcdir/kernel-2.6.38.patch
   make KVERS=$_kernver
 }
 
