Fix missing deps (FS#24176)
git-svn-id: file:///srv/repos/svn-packages/svn@123190 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -89,7 +89,7 @@ package_kdesdk-kapptemplate() {
 
 package_kdesdk-kate() {
 	pkgdesc='Advanced Text Editor'
-	depends=('kdebase-runtime')
+	depends=('kdebase-runtime' 'kdebase-lib')
 	url="http://kde.org/applications/utilities/kate/"
 	install='kdesdk-kate.install'
 	cd $srcdir/build/kate
