--- a/gnome-python-desktop/trunk/PKGBUILD
+++ b/gnome-python-desktop/trunk/PKGBUILD
@@ -4,13 +4,13 @@
 # Contributor: Wael Nasreddine <gandalf@siemens-mobiles.org>
 
 pkgbase=gnome-python-desktop
-pkgname=('gnome-python-desktop' 'python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint')
+pkgname=('gnome-python-desktop' 'python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gnomeprint')
 pkgver=2.32.0
-pkgrel=5
+pkgrel=6
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 options=('!libtool')
-makedepends=('intltool' 'pkg-config' 'gnome-python' 'gtksourceview' 'libgnomeprintui' 'libgtop' 'totem-plparser' 'bug-buddy' 'gnome-desktop2' 'metacity' 'librsvg')
+makedepends=('intltool' 'pkg-config' 'gnome-python' 'libgnomeprintui' 'libgtop' 'totem-plparser' 'bug-buddy' 'gnome-desktop2' 'metacity' 'librsvg')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgbase}/2.32/${pkgbase}-${pkgver}.tar.bz2)
 sha256sums=('09dbd580bf3b0ef60f91b090eafe6d08ddcc50a609e2b425a7f8eca46d4e0ee9')
@@ -22,7 +22,7 @@ build() {
 }
 
 package_gnome-python-desktop() {
-  depends=('python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint' 'gnome-python')
+  depends=('python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gnomeprint' 'gnome-python')
   pkgdesc="Python bindings for the GNOME desktop environment"
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
@@ -105,16 +105,6 @@ package_python-wnck() {
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make -C wnck install DESTDIR="${pkgdir}"
-}
-
-package_python-gtksourceview() {
-  depends=('pygtk' 'gtksourceview' 'python-gnomeprint')
-  pkgdesc="Python bindings for gtksourceview"
-
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  for dir in gtksourceview docs/gtksourceview; do
-    make -C ${dir} install DESTDIR="${pkgdir}"
-  done
 }
 
 package_python-gnomeprint() {
