--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,22 +3,23 @@
 
 pkgname=lablgtk2
 pkgver=2.14.2
-pkgrel=1
+pkgrel=2
 pkgdesc=" An Objective Caml interface to gtk2"
 arch=(i686 x86_64)
 license=('LGPL')
-url="http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/lablgtk.html"
-depends=('gtk2' 'gtkspell' 'libgnomecanvas' 'librsvg' 'libgnomeui' 'gtksourceview' 'gtksourceview2')
+url="http://lablgtk.forge.ocamlcore.org/"
+depends=('gtk2' 'gtkspell' 'libgnomecanvas' 'librsvg' 'libgnomeui' 'gtksourceview2')
 makedepends=('ocaml')
-source=(http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/lablgtk-$pkgver.tar.gz)
+source=(https://forge.ocamlcore.org/frs/download.php/561/lablgtk-${pkgver}.tar.gz)
 options=(!makeflags)
+md5sums=('bad77680a72dab8b915cae99d1ec9b1f')
 
 build() {
-  cd $startdir/src/lablgtk-$pkgver
-  ./configure
+  cd "${srcdir}/lablgtk-${pkgver}"
+  ./configure --prefix=/usr
   make world
   make opt
-  make  PREFIX=$startdir/pkg/usr LIBDIR=$startdir/pkg/usr/lib/ocaml BINDIR=$startdir/pkg/usr/bin INSTALLDIR=$startdir/pkg/usr/lib/ocaml/lablgtk2 DLLDIR=$startdir/pkg/usr/lib/ocaml/stublibs install
-rm -r $startdir/pkg/usr/bin
+  make DESTDIR="${pkgdir}" install
+  install -m644 META "${pkgdir}/usr/lib/ocaml/lablgtk2/"
+  rm -r "${pkgdir}/usr/bin"
 }
-md5sums=('bad77680a72dab8b915cae99d1ec9b1f')
