--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,30 +3,27 @@
 # Contributor: Kevin Edmonds <edmondskevin@hotmail.com>
 
 pkgname=libmtp
-pkgver=1.0.2
-pkgrel=2
+pkgver=1.0.6
+pkgrel=1
 pkgdesc="library implementation of the Media Transfer Protocol"
 arch=("i686" "x86_64")
 url="http://libmtp.sourceforge.net"
 license=('LGPL')
 depends=('libusb-compat')
 makedepends=('doxygen')
-source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('cdc1cc6afa6be287ff6bc331e71bdc47')
 options=('!libtool')
+source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
+md5sums=('7d3c624d768adba8537f8bc9c0a82cbf')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd $srcdir/$pkgname-$pkgver
-  make DESTDIR=$pkgdir install
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
   
-  install -D -m0644 libmtp.rules \
-         $pkgdir/lib/udev/rules.d/52-libmtp.rules
-  install -D -m0644 libmtp.fdi \
-         $pkgdir/usr/share/hal/fdi/information/20thirdparty/libmtp.fdi
+  install -D -m0644 libmtp.rules "${pkgdir}/lib/udev/rules.d/52-libmtp.rules"
 }
