--- a/libgme/trunk/PKGBUILD
+++ b/libgme/trunk/PKGBUILD
@@ -2,24 +2,23 @@
 # Contributer: Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>
 
 pkgname=libgme
-pkgver=0.5.5
-pkgrel=3
+pkgver=0.6.0
+pkgrel=1
 pkgdesc="Video game music file emulation/playback library"
 url="http://game-music-emu.googlecode.com/"
 license=('LGPL')
 arch=('i686' 'x86_64')
 depends=('gcc-libs')
 makedepends=('cmake')
-source=(http://game-music-emu.googlecode.com/files/game-music-emu-${pkgver}.tbz2)
-md5sums=("94459001a763fb76209a550a03b7949e")
+source=(ftp://ftp.archlinux.org/other/game-music-emu/game-music-emu-${pkgver}.tar.xz)
+md5sums=('b72bc337ea4bd6dab7f0288ed4cd598e')
 
 build() {
-	cd "${srcdir}/game-music-emu-${pkgver}"
-	mkdir build
-	cd build
+  cd "${srcdir}/game-music-emu-${pkgver}"
+  mkdir build
+  cd build
 
-	msg "Starting build process."
-	cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-	make
-	make DESTDIR="${pkgdir}" install
+  cmake .. -DCMAKE_INSTALL_PREFIX=/usr
+  make
+  make DESTDIR="${pkgdir}" install
 }
