upgpkg: libgnome 2.32.1-2 Fix schema installation because makepkg handles pkgname different now
git-svn-id: file:///srv/repos/svn-packages/svn@123229 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libgnome/trunk/PKGBUILD
+++ b/libgnome/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=libgnome
 pkgname=('libgnome' 'libgnome-data')
 pkgver=2.32.1
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('LGPL')
 makedepends=('intltool' 'gnome-vfs>=2.24.4' 'libbonobo>=2.32.1' 'gconf>=2.32.3' 'gvfs>=1.8.1' 'libcanberra>=0.28')
@@ -44,6 +44,6 @@ package_libgnome-data() {
    done
 
    install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
-   gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" --domain libgnome-2.0 ${pkgdir}/etc/gconf/schemas/*.schemas
+   gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgbase}.schemas" --domain libgnome-2.0 ${pkgdir}/etc/gconf/schemas/*.schemas
    rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
