fix building introspection support
git-svn-id: file:///srv/repos/svn-packages/svn@123362 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/evince/trunk/PKGBUILD
+++ b/evince/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=evince
 pkgver=3.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Simply a document viewer"
 url="http://projects.gnome.org/evince/"
 arch=('i686' 'x86_64')
@@ -15,11 +15,16 @@ optdepends=('texlive-bin: DVI support')
 groups=('gnome-extra')
 install=evince.install
 options=('!libtool' '!emptydirs')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('7c994a94200114ea7077d3348a03cbbad01c819ece2ec24b436b16e04386291b')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2
+        introspection-fix.patch)
+sha256sums=('7c994a94200114ea7077d3348a03cbbad01c819ece2ec24b436b16e04386291b'
+            '897b8c77c5cda31f4f8d860cd6a7ad8ad986dbf3cf26b56acf054cc650e94be1')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+
+  patch -Np1 -i "${srcdir}/introspection-fix.patch"
+  autoreconf -fi
 
   ./configure --prefix=/usr   --sysconfdir=/etc \
       --localstatedir=/var    --libexecdir=/usr/lib/evince \
@@ -27,7 +32,8 @@ build() {
       --enable-pdf            --enable-tiff \
       --enable-djvu           --enable-dvi \
       --enable-t1lib          --enable-comics \
-      --disable-scrollkeeper  --disable-schemas-compile
+      --disable-scrollkeeper  --disable-schemas-compile \
+      --enable-introspection
   make
 }
 
