upgpkg: lm_sensors 3.3.0-3 Fixed sensors-detect to support /run/udev (closed FS#24120)
git-svn-id: file:///srv/repos/svn-packages/svn@123402 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/lm_sensors/trunk/PKGBUILD
+++ b/lm_sensors/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=lm_sensors
 pkgver=3.3.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Collection of user space tools for general SMBus access and hardware monitoring"
 arch=('i686' 'x86_64')
 url="http://www.lm-sensors.org/"
@@ -15,7 +15,8 @@ backup=('etc/sensors3.conf' 'etc/conf.d/healthd' 'etc/conf.d/sensord')
 options=('!emptydirs')
 source=(http://dl.lm-sensors.org/lm-sensors/releases/lm_sensors-${pkgver}.tar.bz2 \
 	sensors.rc fancontrol.rc sensors-detect.patch healthd healthd.conf healthd.rc \
-        sensord.conf sensord.rc daemonarg.patch)
+        sensord.conf sensord.rc daemonarg.patch \
+        changeset_lm-sensors_trunk_prog_detect_sensors-detect_r5964.diff)
 md5sums=('5eb18d7531ead4f54f28a1133a606535'
          'c370f5e620bfe41113354a1e22c0c18c'
          '232bedf043dd5dedde82df1a399c682c'
@@ -25,7 +26,8 @@ md5sums=('5eb18d7531ead4f54f28a1133a606535'
          '970408d2e509dc4138927020efefe323'
          '96a8dd468e81d455ec9b165bdf33e0b7'
          '41a5c20854bbff00ea7174bd2276b736'
-         '40c8eb16af8249a0f1d851fc1057ea15')
+         '40c8eb16af8249a0f1d851fc1057ea15'
+         '2f1c004bd525bdc9b2495503a77d375a')
 sha1sums=('16c13a186557164fa51459a02209b120c0335f96'
           'b2e664b9b87759991f02d0a1e8cac5e95098c0a5'
           'a068ac0a3115a6191a487e11422506baa922b40a'
@@ -35,12 +37,14 @@ sha1sums=('16c13a186557164fa51459a02209b120c0335f96'
           'e662881f5d3f3f35a1bc97ba45d2c471dd28c37f'
           'de8d4d65406815c389f8a04e2a8508a1ae6749c8'
           '72a60251d1d55a67307dab4105d9f3f01a080af4'
-          '34241388c4001bfb6e49b7e10da1217e29a258d6')
+          '34241388c4001bfb6e49b7e10da1217e29a258d6'
+          '0de66445805adaf65935764da9974df1db125865')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   patch -p1 < ../sensors-detect.patch
   patch -p1 < ../daemonarg.patch
+  patch -p2 < ../changeset_lm-sensors_trunk_prog_detect_sensors-detect_r5964.diff
   make PREFIX=/usr
 }
 
