upgpkg: binutils 2.21-8 fix segfault when stripping non-native files
git-svn-id: file:///srv/repos/svn-packages/svn@123424 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/binutils/trunk/PKGBUILD
+++ b/binutils/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=binutils
 pkgver=2.21
-pkgrel=7
+pkgrel=8
 _date=20110430
 pkgdesc="A set of programs to assemble and manipulate binary and object files"
 arch=('i686' 'x86_64')
@@ -16,8 +16,10 @@ depends=('glibc>=2.13' 'zlib')
 makedepends=('dejagnu')
 options=('!libtool' '!distcc' '!ccache')
 install=binutils.install
-source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}_${_date}.tar.bz2)
-md5sums=('7b3e28fb35cb8bb371cc47291e1c6dec')
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}_${_date}.tar.bz2
+        binutils-2.21-strip-segfault.patch)
+md5sums=('7b3e28fb35cb8bb371cc47291e1c6dec'
+         '98e8dfaf1c0ededa586823ebfb27825a')
 
 mksource() {
   mkdir ${pkgname}-${_date}
@@ -30,6 +32,10 @@ mksource() {
 }
 
 build() {
+  cd ${srcdir}/binutils
+  # http://sourceware.org/bugzilla/show_bug.cgi?id=12632 
+  patch -Np1 -i $srcdir/binutils-2.21-strip-segfault.patch
+
   cd ${srcdir}
   mkdir binutils-build && cd binutils-build
 
