upgpkg: udev 168-1 Update release 168
git-svn-id: file:///srv/repos/svn-packages/svn@123587 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
+# Maintainer: Tom Gundersen <teg@jklm.no>
 
 pkgbase="udev"
 pkgname=('udev' 'udev-compat')
-pkgver=167
-pkgrel=2
+pkgver=168
+pkgrel=1
 arch=(i686 x86_64)
 url="http://www.kernel.org/pub/linux/utils/kernel/hotplug/udev.html"
 license=('GPL')
@@ -108,7 +109,7 @@ package_udev-compat() {
   install -d -m755 ${pkgdir}/lib/${pkgbase}/rules.d
   install -D -m644 ${srcdir}/${pkgbase}-${pkgver}/rules/misc/30-kernel-compat.rules ${pkgdir}/lib/udev/rules.d/30-kernel-compat.rules
 }
-md5sums=('4b37e1222f06c14c24147de346aa0bad'
+md5sums=('4a466078532ab5dd5c35acc3ea2ec9a1'
          '4427855146513a4703ab5c7eb8a0156e'
          'f17c99779173ddc79f866cf3a5de5e68'
          'f91fddc67609b45b244a624977c4247b'
