upgpkg: gc 7.1-3 Install gc manpage in correct category Rename the header to match name and category
git-svn-id: file:///srv/repos/svn-packages/svn@123615 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gc/trunk/PKGBUILD
+++ b/gc/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: dorphell <dorphell@gmx.net>
 pkgname=gc
 pkgver=7.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A garbage collector for C and C++"
 arch=(i686 x86_64)
 url="http://www.hpl.hp.com/personal/Hans_Boehm/gc/"
@@ -24,6 +24,7 @@ build() {
   install -m644 doc/README{,.{changes,contributors,environment,linux}} \
     "${pkgdir}/usr/share/doc/gc/"
 
-  install -m755 -d "${pkgdir}/usr/share/man/man1"
-  install -m644 doc/gc.man "${pkgdir}/usr/share/man/man1/gc.1"
+  sed -i -e 's/GC_MALLOC 1L/gc 3/' doc/gc.man
+  install -m755 -d "${pkgdir}/usr/share/man/man3"
+  install -m644 doc/gc.man "${pkgdir}/usr/share/man/man3/gc.3"
 }
