upgpkg: grml-zsh-config 0.3.89-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@123620 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grml-zsh-config/trunk/PKGBUILD
+++ b/grml-zsh-config/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=grml-zsh-config
-pkgver=0.3.87
+pkgver=0.3.89
 pkgrel=1
 pkgdesc="grml's zsh setup"
 arch=('any')
@@ -12,15 +12,15 @@ provides=('grmlzshrc')
 depends=('zsh')
 makedepends=('txt2tags')
 source=("http://deb.grml.org/pool/main/g/grml-etc-core/grml-etc-core_${pkgver}.tar.gz")
-md5sums=('2fb100395592eecb7db26e96bf37a33c')
+md5sums=('72de9d22d2c4031d3a4c476a555f2d63')
 
 build() {
-	cd ${srcdir}/grml-etc-core/doc
+	cd ${srcdir}/grml-etc-core-${pkgver}/doc
 	make
 }
 
 package() {
-	cd ${srcdir}/grml-etc-core
+	cd ${srcdir}/grml-etc-core-${pkgver}
 	install -D -m644 etc/skel/.zshrc ${pkgdir}/etc/skel/.zshrc
 	install -D -m644 etc/zsh/keephack ${pkgdir}/etc/zsh/keephack
 	install -D -m644 etc/zsh/zshrc ${pkgdir}/etc/zsh/zshrc
