update maintainer line
git-svn-id: file:///srv/repos/svn-packages/svn@123634 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ypserv/trunk/PKGBUILD
+++ b/ypserv/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Contributor: judd <jvinet@zeroflux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=ypserv
