fix a missing dependence in kdegames-kajongg (FS#24237)
git-svn-id: file:///srv/repos/svn-packages/svn@123675 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdegames/trunk/PKGBUILD
+++ b/kdegames/trunk/PKGBUILD
@@ -44,13 +44,13 @@ pkgname=('kdegames-bomber'
          'kdegames-lskat'
          'kdegames-palapeli')
 pkgver=4.6.3
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdegames')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'ggz-client-libs'
-	'twisted' 'kdebindings-python')
+             'twisted' 'kdebindings-python')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 sha1sums=('472cb9541f389a8869a496f715d48587db568dda')
 
@@ -101,7 +101,7 @@ package_kdegames-granatier() {
 
 package_kdegames-kajongg() {
 	pkgdesc='The ancient Chinese board game for 4 players'
-	depends=('kdebase-runtime' 'kdegames-libkdegames' 'kdebindings-python' 'twisted')
+	depends=('kdegames-libkdegames' 'kdegames-libkmahjongg' 'kdebindings-python' 'twisted')
 	install='kdegames.install'
 	cd $srcdir/build/kajongg
 	make DESTDIR=$pkgdir install
