update the database of MIME types after the installation of some game
git-svn-id: file:///srv/repos/svn-packages/svn@123676 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdegames/trunk/PKGBUILD
+++ b/kdegames/trunk/PKGBUILD
@@ -206,7 +206,7 @@ package_kdegames-kfourinline() {
 	pkgdesc='Four-in-a-row Board Game'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
 	url="http://kde.org/applications/games/kfourinline/"
-	install='kdegames.install'
+	install='kdegames-kfourinline.install'
 	cd $srcdir/build/kfourinline
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/kfourinline
@@ -228,7 +228,7 @@ package_kdegames-kigo() {
 	pkgdesc='Go Board Game'
 	depends=('kdebase-runtime' 'kdegames-libkdegames' 'gnugo')
 	url="http://kde.org/applications/games/kigo/"
-	install='kdegames.install'
+	install='kdegames-kigo.install'
 	cd $srcdir/build/kigo
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/kigo
@@ -329,7 +329,7 @@ package_kdegames-kolf() {
 	pkgdesc='Miniature Golf'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
 	url="http://kde.org/applications/games/kolf/"
-	install='kdegames.install'
+	install='kdegames-kolf.install'
 	cd $srcdir/build/kolf
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/kolf
@@ -409,7 +409,7 @@ package_kdegames-kspaceduel() {
 	pkgdesc='Space Arcade Game'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
 	url="http://kde.org/applications/games/kspaceduel/"
-	install='kdegames.install'
+	install='kdegames-kspaceduel.install'
 	cd $srcdir/build/kspaceduel
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/kspaceduel
@@ -455,7 +455,7 @@ package_kdegames-ktuberling() {
 	pkgdesc='Picture Game for Children'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
 	url="http://kde.org/applications/games/ktuberling/"
-	install='kdegames.install'
+	install='kdegames-ktuberling.install'
 	cd $srcdir/build/ktuberling
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/ktuberling
@@ -496,7 +496,7 @@ package_kdegames-lskat() {
 	pkgdesc='Card Game'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
 	url="http://kde.org/applications/games/lskat/"
-	install='kdegames.install'
+	install='kdegames-lskat.install'
 	cd $srcdir/build/lskat
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/lskat
